# SelfhostBackup

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: config.rs  lib.rs  main.rs  s3.rs
