[package]
authors = ["koro33 <koro33g@gmail.com>"]
edition = "2021"
name = "s-backup"
version = "0.1.2"

license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/Koro33/s-backup"

[dependencies]
anyhow = "1.0.80"
blake3 = { version = "1.5.0", features = ["mmap", "rayon"] }
chrono = { version = "0.4.34" }
clap = { version = "4.5.1", features = ["derive"] }
humansize = { version = "2.1.3", features = ["impl_style"] }
opendal = { version = "0.45.0", features = ["layers-tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

[dev-dependencies]

[profile.release]
lto = true
panic = 'abort'
strip = true
